--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-30  Hans Breuer  <hans@breuer.org>
+
+	* gtk/makefile.msc.in tests/makefile.msc : updated
+
 2005-07-30  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gtk/gtkctree.c (gtk_ctree_class_init): Do not use | 
