--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-31  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation
+
 2005-07-30  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
