--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-31  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2002-07-31  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation
