--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-31  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Bulk updates to Finnish translation
+             for new gnome.fi website.
+
 2005-07-31  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
