--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-01  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkmain.c (do_post_parse_initialization): Call
+	gettext_initialization() here as well.  (#311612, Dan Winship)
+
 2005-07-30  Hans Breuer  <hans@breuer.org>
 
 	* gtk/makefile.msc.in : updated
