--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-01  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkmain.c (do_post_parse_initialization): Call
+	gettext_initialization() here as well.  (#311612, Dan Winship)
+
 2005-08-01  Tor Lillqvist  <tml@novell.com>
 
 	* gdk/win32/gdkwindow-win32.c (gdk_window_set_urgency_hint):
