--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-08-01  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkclipboard.c (gtk_clipboard_set_image) 
+	(gtk_clipboard_set_text): Don't leak atom names.  (#311933,
+	Peter Zelezny)
+
 	* gtk/gtkmain.c (do_post_parse_initialization): Call
 	gettext_initialization() here as well.  (#311612, Dan Winship)
 
