--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-08-01  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/x11/gdkevents-x11.c (gdk_check_wm_desktop_changed): Make
+	tracking the on_all_desktops state work better.
+
+	* gdk/x11/gdkwindow-x11.c (gdk_x11_window_move_to_current_desktop): 
+	Don't do anything if the window is on all desktops.  (#311803,
+	Elijah Newren)
+
 2005-08-01  Dom Lachowicz <cinamod@hotmail.com>
 
 	* modules/engines/ms-windows/Theme/gtk-2.0/gtkrc: Part of #168326
