Fix a typo, spotted by David Odin.
2005-08-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfixed.c (gtk_fixed_put): Fix a typo, spotted by
	David Odin.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-08-01  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkfixed.c (gtk_fixed_put): Fix a typo, spotted by
+	David Odin.
+
 	* gtk/Makefile.am (install-data-local): 
 	* gtk/gtksettings.c (gtk_settings_class_init): Rename the 
 	default theme to "Raleigh".  (#312254, Thomas Wood)
