--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk.types: Add gtk_clipboard_get_type. (#312443, Danny Milo)
+
 2005-07-22  Federico Mena Quintero  <federico@ximian.com>
 
 	* gtk/migrating-checklist.sgml: Call gtk_menu_attach_to_widget()
