--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-03  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Remove translation context of progress cell renderer.
+
 2005-08-01  Martin Kretzschmar  <martink@gnome.org>
 
 	* de.po: untranslate translation context of progress cell renderer
