--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-04  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Change translation of Justify|_Fill to _Blocksatz.
+
 2005-08-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.7.5 ===
