Added Telugu translations done by Prajasakti Localisation Team <localisation@prajasakti.com>.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
+
+	* te.po: Added Telugu translation done by
+	Prajasakti Localisation Team
+	<localisation@prajasakti.com>
+
 2005-08-04  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Change translation of Justify|_Fill to _Blocksatz.
