--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
+
+	* configure.in: Re-added "te" to ALL_LINGUAS after
+	correcting the problem.
+
 2005-08-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Require cairo 0.6
