--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
+
+	* te.po: Added Telugu translation.
+
 2005-08-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.7.5 ===
