--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-05  Terance Sola  <terance@lyse.net>
+
+	* nb.po: Updated Norwegian Bokmål translation.
+	* no.po: Same.
+
 2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
 
 	* te.po: Added Telugu translation.
