--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-05  Marcel Telka  <marcel@telka.sk>
+
+	* sk.po: Updated Slovak translation.
+
 2005-08-05  Terance Sola  <terance@lyse.net>
 
 	* nb.po: Updated Norwegian Bokmål translation.
