Set the relief of the arrow button to the value returned by
Fri Aug  5 16:54:19 2005  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkmenutoolbutton.c
	(gtk_menu_tool_button_construct_contents): Set the relief of the
	arrow button to the value returned by
	gtk_tool_item_get_relief_style(). Patch from Benjamin Berg.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Aug  5 16:54:19 2005  Søren Sandmann  <sandmann@redhat.com>
+
+	* gtk/gtkmenutoolbutton.c
+	(gtk_menu_tool_button_construct_contents): Set the relief of the
+	arrow button to the value returned by
+	gtk_tool_item_get_relief_style(). Patch from Benjamin Berg.
+
 2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
 
 	* configure.in: Re-added "te" to ALL_LINGUAS after
