Add bug number to ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Fri Aug  5 16:54:19 2005  Søren Sandmann  <sandmann@redhat.com>
 	(gtk_menu_tool_button_construct_contents): Set the relief of the
 	arrow button to the value returned by
 	gtk_tool_item_get_relief_style(). Patch from Benjamin Berg.
+	Bug 312695.
 
 2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
 
