--- a/gtk/xdgmime/ChangeLog
+++ b/gtk/xdgmime/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* Rename caches to _caches, so it doesn't
+	get exported. Also don't export n_caches.
+
 2005-08-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.7.5 ===
