--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* abicheck.sh: Also check exported variables.
+
 2005-08-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.7.5 ===
