--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-07  Nikos Charonitakis  <charosn@her.forthnet.gr>
+
+	* el.po: Updated Greek translation.
+
 2005-08-05  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
