--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-07  Mohammad DAMT  <mdamt@gnome.org>
+
+	* id.po: Updated Indonesian translation
+
 2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
 
 	* te.po: Added Telugu translation done by
