--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-08-08  Christian Persch  <chpe@cvs.gnome.org>
+
+	* gtk/gtkmenutoolbutton.c: (gtk_menu_tool_button_state_changed),
+	(gtk_menu_tool_button_class_init), (popup_menu_under_arrow),
+	(gtk_menu_tool_button_init):
+
+	Deactivate the menu when the button becomes insensitive, and remove
+	dead code. Fixes bug #312920.
+
 2005-08-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/gdk.symbols: Make the last change compile.
