--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtksizegroup.c (get_size_groups, set_size_groups): Use
+	g_quark_from_static_string here. 
+
 2005-08-08  Christian Persch  <chpe@cvs.gnome.org>
 
 	* gtk/gtkmenutoolbutton.c: (gtk_menu_tool_button_state_changed),
